Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daniel Marcelo - Desarrollador Front-end & Ingeniero en Sistemas</title>
+    <title>Daniel Marcelo - Desarrollador Front-end & Ingeniero de Sistemas</title>
     
     <!-- Open Graph para WhatsApp, Telegram y redes sociales -->
     <meta property="og:title" content="Daniel Marcelo - Desarrollador Front-end & UX/UI" />
@@ -16,7 +16,7 @@
     <!-- Twitter Card (también usada por Telegram) -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Daniel Marcelo - Desarrollador Front-end & UX/UI" />
-    <meta name="twitter:description" content="Portafolio profesional de Daniel Marcelo, ingeniero en sistemas especializado en desarrollo web y diseño UX/UI." />
+    <meta name="twitter:description" content="Portafolio profesional de Daniel Marcelo, ingeniero de sistemas especializado en desarrollo web y diseño UX/UI." />
     <meta name="twitter:image" content="https://i.imgur.com/LqJIwVE.png" />
     
     <!-- Metadatos adicionales -->
@@ -1218,6 +1218,7 @@ Tip: Use a square image (400x400px) for best results.`;
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9931e357829c6e78',t:'MTc2MTIyOTM2Mi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
 
 
 
