Replace 'Hello World' with 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -8,16 +8,29 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="theme-color" content="#8b5cf6">
   <title>Daniel Marcelo - Desarrollador Front-end &amp; Ingeniero de Sistemas</title><!-- Open Graph para WhatsApp, Telegram y redes sociales -->
-  <meta property="og:title" content="Daniel Marcelo - Desarrollador Front-end &amp; UX/UI">
-  <meta property="og:description" content="Portafolio profesional de Daniel Marcelo, ingeniero de sistemas especializado en desarrollo web y diseño UX/UI.">
+  <meta property="og:title" content="Daniel Marcelo - Desarrollador Front-end &amp; Ingeniero de Sistemas">
+  <meta property="og:description" content="🚀 Desarrollo web profesional, UX/UI, e-commerce y marketing digital. Transformo ideas en experiencias digitales extraordinarias. ¡Contáctame para tu próximo proyecto!">
   <meta property="og:image" content="https://i.imgur.com/LqJIwVE.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="Daniel Marcelo - Desarrollador Front-end profesional especializado en crear sitios web modernos y aplicaciones">
   <meta property="og:url" content="https://daniel123951.github.io/danielmarcelo/">
   <meta property="og:type" content="website">
-  <meta property="og:site_name" content="Daniel Marcelo Portfolio"><!-- Twitter Card (también usada por Telegram) -->
+  <meta property="og:site_name" content="Daniel Marcelo - Portfolio Profesional">
+  <meta property="og:locale" content="es_ES"><!-- Twitter Card (también usada por Telegram) -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Daniel Marcelo - Desarrollador Front-end &amp; UX/UI">
-  <meta name="twitter:description" content="Portafolio profesional de Daniel Marcelo, ingeniero de sistemas especializado en desarrollo web y diseño UX/UI.">
-  <meta name="twitter:image" content="https://i.imgur.com/LqJIwVE.png"><!-- Metadatos adicionales -->
+  <meta name="twitter:site" content="@danielmarcelo">
+  <meta name="twitter:creator" content="@danielmarcelo">
+  <meta name="twitter:title" content="Daniel Marcelo - Desarrollador Front-end &amp; Ingeniero de Sistemas">
+  <meta name="twitter:description" content="🚀 Desarrollo web profesional, UX/UI, e-commerce y marketing digital. Transformo ideas en experiencias digitales extraordinarias. ¡Contáctame para tu próximo proyecto!">
+  <meta name="twitter:image" content="https://i.imgur.com/LqJIwVE.png">
+  <meta name="twitter:image:alt" content="Daniel Marcelo - Desarrollador Front-end profesional especializado en crear sitios web modernos y aplicaciones"><!-- WhatsApp específico -->
+  <meta property="og:image:type" content="image/png"><!-- LinkedIn específico -->
+  <meta property="article:author" content="Daniel Marcelo">
+  <meta property="article:section" content="Tecnología">
+  <meta property="article:tag" content="Desarrollo Web, UX/UI, Front-end, Ingeniero de Sistemas"><!-- Facebook específico -->
+  <meta property="fb:app_id" content="your-facebook-app-id"><!-- Telegram específico -->
+  <meta name="telegram:channel" content="@danielmarcelo"><!-- Metadatos adicionales -->
   <meta name="description" content="Portafolio profesional de Daniel Marcelo, ingeniero de sistemas especializado en desarrollo web, UX/UI y soluciones tecnológicas integrales.">
   <meta name="keywords" content="Daniel Marcelo, desarrollador front-end, UX/UI, ingeniero sistemas, WordPress, JavaScript, HTML, CSS">
   <meta name="author" content="Daniel Marcelo">
@@ -1332,30 +1345,30 @@
                         <div class="space-y-4 mb-6">
                             <button onclick="selectPaymentMethod('paypal', '${planName}', '${paymentType}', '${price}')" 
                                     class="w-full flex items-center justify-between p-4 border-2 border-gray-200 rounded-2xl hover:border-blue-500 hover:bg-blue-50 transition-all">
-                                <div class="flex items-center">
-                                    <div class="w-12 h-12 bg-blue-500 rounded-xl flex items-center justify-center mr-4">
+                                <div class="flex items-center min-w-0 flex-1">
+                                    <div class="w-12 h-12 bg-blue-500 rounded-xl flex items-center justify-center mr-3 flex-shrink-0">
                                         <i class="fab fa-paypal text-white text-xl"></i>
                                     </div>
-                                    <div class="text-left">
+                                    <div class="text-left min-w-0 flex-1">
                                         <div class="font-semibold text-gray-800">PayPal</div>
-                                        <div class="text-sm text-gray-500">danielpaypal123951@gmail.com</div>
+                                        <div class="text-xs sm:text-sm text-gray-500 truncate">danielpaypal123951@gmail.com</div>
                                     </div>
                                 </div>
-                                <i class="fas fa-chevron-right text-gray-400"></i>
+                                <i class="fas fa-chevron-right text-gray-400 flex-shrink-0 ml-2"></i>
                             </button>
                             
                             <button onclick="selectPaymentMethod('zinli', '${planName}', '${paymentType}', '${price}')" 
                                     class="w-full flex items-center justify-between p-4 border-2 border-gray-200 rounded-2xl hover:border-purple-500 hover:bg-purple-50 transition-all">
-                                <div class="flex items-center">
-                                    <div class="w-12 h-12 bg-purple-500 rounded-xl flex items-center justify-center mr-4">
+                                <div class="flex items-center min-w-0 flex-1">
+                                    <div class="w-12 h-12 bg-purple-500 rounded-xl flex items-center justify-center mr-3 flex-shrink-0">
                                         <i class="fas fa-credit-card text-white text-xl"></i>
                                     </div>
-                                    <div class="text-left">
+                                    <div class="text-left min-w-0 flex-1">
                                         <div class="font-semibold text-gray-800">Zinli</div>
-                                        <div class="text-sm text-gray-500">danielmarcelo123951@gmail.com</div>
+                                        <div class="text-xs sm:text-sm text-gray-500 truncate">danielmarcelo123951@gmail.com</div>
                                     </div>
                                 </div>
-                                <i class="fas fa-chevron-right text-gray-400"></i>
+                                <i class="fas fa-chevron-right text-gray-400 flex-shrink-0 ml-2"></i>
                             </button>
                             
                             <button onclick="selectPaymentMethod('binance', '${planName}', '${paymentType}', '${price}')" 
@@ -1759,5 +1772,5 @@ ${planDetails}
             if (modal) modal.remove();
         }
     </script>
- <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'996b2cce30bf492b',t:'MTc2MTgzMDA1OS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+ <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'996b3c1b6005492b',t:'MTc2MTgzMDY4Ni4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
